--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,8 +2,8 @@
 import Layout from "@layouts/Layout.astro"
 ---
 
-<Layout>
+<Layout title="Blog">
   <section>
-    <p>Home</p>
+    <p>Blog</p>
   </section>
 </Layout>
