added space between other elements

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ const menuLinks: Array<{ title: string; path: string }> = [
 ]
 ---
 
-<header class="flex justify-between">
+<header class="flex justify-between py-5">
   <a href="/">The Asnews</a>
   <nav class="flex gap-5">
     {
