--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,3 @@
-<footer>
-  <p>&copy; {new Date().getFullYear()} The Asnews. All Rights Reserved.</p>
+<footer class="py-5 mt-20">
+  <p>&copy; {new Date().getFullYear()} The Asnews.</p>
 </footer>
