--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,10 +1,10 @@
 ---
 import type { Article } from "@interfaces/newsapi"
 import Layout from "@layouts/Layout.astro"
-import newsapi from "@lib/newsapi"
+import { FTopHeadlines } from "@lib/newsapi"
 
 export const getStaticPaths = async () => {
-  const articles = await newsapi<Article[]>({
+  const articles = await FTopHeadlines<Article[]>({
     endpoint: "top-headlines",
     country: "us",
     category: "general",
