--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,21 +1,38 @@
 ---
-import type { Article } from "@interfaces/newsapi"
+import type { Article, Category } from "@interfaces/newsapi"
 import Layout from "@layouts/Layout.astro"
 import { FTopHeadlines } from "@lib/newsapi"
 import slug from "@lib/slug"
 
 export const getStaticPaths = async () => {
-  const articles = await FTopHeadlines<Article[]>({
-    endpoint: "top-headlines",
-    country: "us",
-    category: "technology",
-    wrappedByKey: "articles"
-  })
+  const categories: Category[] = [
+    "business",
+    "entertainment",
+    "general",
+    "health",
+    "science",
+    "sports",
+    "technology"
+  ]
+  const paths: Array<{ params: { slug: string }; props: Article }> = []
 
-  return articles.map((article) => ({
-    params: { slug: slug(article.title) },
-    props: article
-  }))
+  for (const category of categories) {
+    const articles = await FTopHeadlines<Article[]>({
+      endpoint: "top-headlines",
+      country: "us",
+      category,
+      wrappedByKey: "articles"
+    })
+
+    paths.push(
+      ...articles.map((article) => ({
+        params: { slug: slug(article.title) },
+        props: article
+      }))
+    )
+  }
+
+  return paths
 }
 
 type Props = Article
